java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType58119e.pass
package org.netbeans.test.java.hints;

import javax.swing.JList;

/**
 * @author leon chiver
 */
public class IncorrectType58119e {
    
    /** Creates a new instance of IncorrectType58119e */
    public IncorrectType58119e() {
    }

    static JList doStuff(String string) {
        return null;
    }
    
}
